clusters/hetzner/headscale/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-admin
  namespace: headscale
spec:
  stripPrefix:
    prefixes:
      - /admin
