clusters/hetzner/headscale/ingress-headplane.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headplane
  namespace: headscale
  labels:
    app: headplane
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: headscale-compress@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vpn.codextechnologies.org
      secretName: headscale-tls
  rules:
    - host: vpn.codextechnologies.org
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: headplane
                port:
                  number: 80
