clusters/hetzner/headscale/ingress-headscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  namespace: headscale
  labels:
    app: headscale
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vpn.codextechnologies.org
      secretName: headscale-tls
  rules:
    - host: vpn.codextechnologies.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  number: 80
